Bug 1665796 - Make sure Document::IsScrollingElement and overflow propagation code agree. r=mats

They got out of sync in bug 1635473.

Differential Revision: https://phabricator.services.mozilla.com/D93117